Added Result Table for prediction model

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 35,
    "id": "4a91f376",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 36,
    "id": "777b8643",
    "metadata": {},
    "outputs": [],
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 37,
    "id": "9902243c",
    "metadata": {},
    "outputs": [
@@ -155,7 +155,7 @@
        "4  2023-11-17   AAPL  190.250000  190.380005  188.570007  189.690002  50922700"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 38,
    "id": "b23abfeb",
    "metadata": {},
    "outputs": [
@@ -185,7 +185,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 39,
    "id": "b94cc7c2",
    "metadata": {},
    "outputs": [
@@ -310,7 +310,7 @@
        "max     598.219971   602.950012   589.960022   595.940002  1.142269e+09"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 40,
    "id": "399989f5",
    "metadata": {},
    "outputs": [],
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 41,
    "id": "2c800d60",
    "metadata": {},
    "outputs": [
@@ -350,7 +350,7 @@
        "dtype: bool"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -370,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 42,
    "id": "0201b64a",
    "metadata": {},
    "outputs": [
@@ -380,7 +380,7 @@
        "Text(0.5, 1.0, 'Stock Closing Price Over Time')"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -413,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 43,
    "id": "fe6067c1",
    "metadata": {},
    "outputs": [
@@ -498,7 +498,7 @@
        "3  54412900  0.009042  "
       ]
      },
-     "execution_count": 76,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -513,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 44,
    "id": "ca4bae46",
    "metadata": {},
    "outputs": [
@@ -523,7 +523,7 @@
        "Text(0.5, 1.0, 'Distribution of Daily Returns')"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -564,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 45,
    "id": "834a8aec",
    "metadata": {},
    "outputs": [
@@ -658,7 +658,7 @@
        "4  Apple is releasing a free software update that...  "
       ]
      },
-     "execution_count": 78,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -671,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 46,
    "id": "98605691",
    "metadata": {},
    "outputs": [
@@ -685,7 +685,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -697,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 47,
    "id": "9ab8f9c0",
    "metadata": {},
    "outputs": [
@@ -781,7 +781,7 @@
        "freq                                                    6  "
       ]
      },
-     "execution_count": 80,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -793,7 +793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 48,
    "id": "4c88fb4d",
    "metadata": {},
    "outputs": [],
@@ -818,23 +818,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 49,
    "id": "63b5ffc3",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\USUARIO\\AppData\\Local\\Temp\\ipykernel_12520\\2600075466.py:2: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  df_price['date'] = pd.to_datetime(df_price['date']).dt.date\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Convert date columns to datetime\n",
     "df_price['date'] = pd.to_datetime(df_price['date']).dt.date\n",
@@ -843,7 +830,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 50,
    "id": "cc691661",
    "metadata": {},
    "outputs": [],
@@ -854,7 +841,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 51,
    "id": "fa94c3a2",
    "metadata": {},
    "outputs": [],
@@ -868,7 +855,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 52,
    "id": "0e54784e",
    "metadata": {},
    "outputs": [
@@ -1055,7 +1042,7 @@
        "9  38415400  0.003214          27  "
       ]
      },
-     "execution_count": 85,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1074,7 +1061,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 53,
    "id": "d56d3905",
    "metadata": {},
    "outputs": [
@@ -1179,7 +1166,7 @@
        "4  2023-11-20           4"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1192,7 +1179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 54,
    "id": "269fd219",
    "metadata": {},
    "outputs": [
@@ -1318,7 +1305,7 @@
        "[1686 rows x 3 columns]"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1339,7 +1326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 55,
    "id": "e1ad2357",
    "metadata": {},
    "outputs": [
@@ -1506,7 +1493,7 @@
        "14  2023-12-05  193.419998  191.363332  190.514282"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1530,7 +1517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "id": "1cae46ce",
    "metadata": {},
    "outputs": [
@@ -1681,7 +1668,7 @@
        "14  2023-12-05  193.419998      1.432423"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1705,7 +1692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "id": "f5f8f554",
    "metadata": {},
    "outputs": [
@@ -1832,7 +1819,7 @@
        "9  2023-11-28  190.399994  189.789993  191.309998"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1864,7 +1851,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 58,
    "id": "9ea6d418",
    "metadata": {},
    "outputs": [],
@@ -1878,7 +1865,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 59,
    "id": "bd1b098d",
    "metadata": {},
    "outputs": [],
@@ -1891,7 +1878,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "id": "f31ce88c",
    "metadata": {},
    "outputs": [
@@ -1914,7 +1901,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "id": "87b704c3",
    "metadata": {},
    "outputs": [],
@@ -1937,7 +1924,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 62,
    "id": "801534ba",
    "metadata": {},
    "outputs": [],
@@ -1954,7 +1941,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "id": "3c4758d1",
    "metadata": {},
    "outputs": [
@@ -1995,7 +1982,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "id": "44d244df",
    "metadata": {},
    "outputs": [],
@@ -2012,7 +1999,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "id": "2e08cff6",
    "metadata": {},
    "outputs": [],
@@ -2027,7 +2014,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 66,
    "id": "4f7983a4",
    "metadata": {},
    "outputs": [
@@ -2082,7 +2069,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "id": "8707df1d",
    "metadata": {},
    "outputs": [
@@ -2134,6 +2121,143 @@
    "metadata": {},
    "source": [
     "For the Linear Regression, the \"Real\" line (blue) represents the actual observed close prices in the dataset, while the \"Predicted\" line (orange) shows the estimations of the model I developed. Overall, the model appears to follow the general trend of the real prices, which means is a reasonable fit. Around the 100-time unit mark the model struggled to accurately predict a sudden, sharp change in price. However, the predictions generally align closely with the real values, especially during periods of more stable price movement."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "id": "27e70f60",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Actual</th>\n",
+       "      <th>Predicted</th>\n",
+       "      <th>% Error</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1675</th>\n",
+       "      <td>418.74</td>\n",
+       "      <td>417.16</td>\n",
+       "      <td>-0.38</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1676</th>\n",
+       "      <td>416.12</td>\n",
+       "      <td>416.32</td>\n",
+       "      <td>0.05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1677</th>\n",
+       "      <td>416.72</td>\n",
+       "      <td>414.04</td>\n",
+       "      <td>-0.64</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1678</th>\n",
+       "      <td>418.16</td>\n",
+       "      <td>414.38</td>\n",
+       "      <td>-0.90</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1679</th>\n",
+       "      <td>418.78</td>\n",
+       "      <td>415.83</td>\n",
+       "      <td>-0.70</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1680</th>\n",
+       "      <td>427.51</td>\n",
+       "      <td>416.25</td>\n",
+       "      <td>-2.63</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1681</th>\n",
+       "      <td>424.60</td>\n",
+       "      <td>425.30</td>\n",
+       "      <td>0.16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1682</th>\n",
+       "      <td>424.73</td>\n",
+       "      <td>423.07</td>\n",
+       "      <td>-0.39</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1683</th>\n",
+       "      <td>428.15</td>\n",
+       "      <td>423.58</td>\n",
+       "      <td>-1.07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1684</th>\n",
+       "      <td>426.59</td>\n",
+       "      <td>426.13</td>\n",
+       "      <td>-0.11</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Actual  Predicted  % Error\n",
+       "1675  418.74     417.16    -0.38\n",
+       "1676  416.12     416.32     0.05\n",
+       "1677  416.72     414.04    -0.64\n",
+       "1678  418.16     414.38    -0.90\n",
+       "1679  418.78     415.83    -0.70\n",
+       "1680  427.51     416.25    -2.63\n",
+       "1681  424.60     425.30     0.16\n",
+       "1682  424.73     423.07    -0.39\n",
+       "1683  428.15     423.58    -1.07\n",
+       "1684  426.59     426.13    -0.11"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "results_df = pd.DataFrame({\n",
+    "    \"Actual\": y_test_clean,\n",
+    "    \"Predicted\": y_pred_baseline\n",
+    "})\n",
+    "\n",
+    "# Calculate percentage error\n",
+    "results_df[\"% Error\"] = ((results_df[\"Predicted\"] - results_df[\"Actual\"]) / results_df[\"Actual\"]) * 100\n",
+    "\n",
+    "# Show last 10 rows\n",
+    "results_sample = results_df.tail(10).round(2)\n",
+    "display(results_sample)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "62592916",
+   "metadata": {},
+   "source": [
+    "The model predictions are generally close to actual values, with errors mostly under 1% and only occasional deviations above 2%."
    ]
   }
  ],
