Minor fix and final details

--- a/main.ipynb
+++ b/main.ipynb
@@ -821,7 +821,20 @@
    "execution_count": 49,
    "id": "63b5ffc3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\USUARIO\\AppData\\Local\\Temp\\ipykernel_21356\\2600075466.py:2: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df_price['date'] = pd.to_datetime(df_price['date']).dt.date\n"
+     ]
+    }
+   ],
    "source": [
     "# Convert date columns to datetime\n",
     "df_price['date'] = pd.to_datetime(df_price['date']).dt.date\n",
@@ -841,7 +854,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "id": "fa94c3a2",
    "metadata": {},
    "outputs": [],
@@ -850,7 +863,7 @@
     "df_final = pd.merge(df_price, news_agg, on='date', how='left')\n",
     "\n",
     "# Fill NaN values in 'news_count' with 0 (days with no news)\n",
-    "df_final['news_count'] = df_final['news_count'].fillna(0).astype(int)\n"
+    "df_final['news_count'] = df_final['news_count'].fillna(0).astype(int)"
    ]
   },
   {
@@ -1326,7 +1339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": null,
    "id": "e1ad2357",
    "metadata": {},
    "outputs": [
@@ -1504,7 +1517,7 @@
     "df_final['MA_7'] = df_final['close'].rolling(window=7).mean()   # 7-day moving average\n",
     "\n",
     "print(\"------------ Moving Averages ------------\")\n",
-    "df_final[['date', 'close', 'MA_3', 'MA_7']].head(15)\n"
+    "df_final[['date', 'close', 'MA_3', 'MA_7']].head(15)"
    ]
   },
   {
@@ -1517,7 +1530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": null,
    "id": "1cae46ce",
    "metadata": {},
    "outputs": [
@@ -1678,7 +1691,7 @@
     "df_final['volatility_7'] = df_final['close'].rolling(window=7).std()\n",
     "\n",
     "print(\" ------------ Volatility ------------\")\n",
-    "df_final[['date', 'close', 'volatility_7']].head(15)\n"
+    "df_final[['date', 'close', 'volatility_7']].head(15)"
    ]
   },
   {
@@ -1982,7 +1995,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": null,
    "id": "44d244df",
    "metadata": {},
    "outputs": [],
@@ -1994,7 +2007,7 @@
     "X_train_improved = X_train_clean[improved_features]\n",
     "X_test_improved = X_test_clean[improved_features]\n",
     "y_train_improved = y_train_clean\n",
-    "y_test_improved = y_test_clean\n"
+    "y_test_improved = y_test_clean"
    ]
   },
   {
@@ -2069,7 +2082,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": null,
    "id": "8707df1d",
    "metadata": {},
    "outputs": [
@@ -2112,7 +2125,7 @@
     "plt.title('XGBoost Feature Importance')\n",
     "plt.ylabel('Importance')\n",
     "plt.xticks(rotation=45)\n",
-    "plt.show()\n"
+    "plt.show()"
    ]
   },
   {
